tests/rosetta/out/Java/averages-mode.error
javac error: exit status 1
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:23: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> v = arr1.get(i);
                                  ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:25: error: incompatible types: List<Integer> cannot be converted to Integer
            counts1.put(v, ((Number)counts1.get(v)).doubleValue() + 1);
                        ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:28: error: incompatible types: List<Integer> cannot be converted to Integer
            counts1.put(v, 1);
                        ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:29: error: incompatible types: List<Integer> cannot be converted to Integer
            keys1.add(v);
                      ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:36: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> k = keys1.get(i);
                                   ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:37: error: incompatible types: Integer cannot be converted to Map<Integer,Integer>
        Map<Integer,Integer> c = counts1.get(k);
                                            ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:38: error: bad operand types for binary operator '>'
        if (c > max1) {
              ^
  first type:  Map<Integer,Integer>
  second type: int
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:39: error: incompatible types: Map<Integer,Integer> cannot be converted to int
            max1 = (int)(c);
                        ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:46: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> k = keys1.get(i);
                                   ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:48: error: incompatible types: List<Integer> cannot be converted to Integer
            modes1.add(k);
                       ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:58: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> v = arr2.get(i);
                                  ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:60: error: incompatible types: List<Integer> cannot be converted to Integer
            counts2.put(v, ((Number)counts2.get(v)).doubleValue() + 1);
                        ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:63: error: incompatible types: List<Integer> cannot be converted to Integer
            counts2.put(v, 1);
                        ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:64: error: incompatible types: List<Integer> cannot be converted to Integer
            keys2.add(v);
                      ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:71: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> k = keys2.get(i);
                                   ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:72: error: incompatible types: Integer cannot be converted to Map<Integer,Integer>
        Map<Integer,Integer> c = counts2.get(k);
                                            ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:73: error: bad operand types for binary operator '>'
        if (c > max2) {
              ^
  first type:  Map<Integer,Integer>
  second type: int
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:74: error: incompatible types: Map<Integer,Integer> cannot be converted to int
            max2 = (int)(c);
                        ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:81: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> k = keys2.get(i);
                                   ^
/tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java:83: error: incompatible types: List<Integer> cannot be converted to Integer
            modes2.add(k);
                       ^
Note: /tmp/TestMochiToJavaaverages-mode3138185463/001/AveragesMode.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
20 errors
